Fix horizontal scroll

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -268,7 +268,7 @@ footer {
 .header{
   width: 100%;
   background: #F8F8F8;
-  border: 1px solid #ECECEC;
+  border-bottom: 1px solid #ECECEC;
   -moz-box-shadow:    0px 0px 4px 0px rgba(0,0,0,0.15);
   box-shadow:         0px 0px 4px 0px rgba(0,0,0,0.15);
   padding: 4rem 0;
